--- a/package.json
+++ b/package.json
@@ -3,12 +3,6 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -29,6 +23,17 @@
     "chalk": "^2.4.1",
     "core-js": "^2.4.1",
     "firebase": "^5.0.4",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-jspm-build": "0.0.16",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-tslint": "^8.1.3",
+    "gulp-typescript": "^4.0.2",
+    "lite-server": "^2.3.0",
+    "ngx-onsenui": "^4.2.0",
+    "onsenui": "^2.10.1",
+    "run-sequence": "^2.2.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
