--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "keep",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {
-  },
+  "scripts": {},
   "private": true,
   "dependencies": {
     "@angular-devkit/build-angular": "^0.6.5",
@@ -31,6 +30,7 @@
     "gulp-tslint": "^8.1.3",
     "gulp-typescript": "^4.0.2",
     "lite-server": "^2.3.0",
+    "ng2-ion-range-slider": "^2.0.0",
     "ngx-onsenui": "^4.2.0",
     "onsenui": "^2.10.1",
     "run-sequence": "^2.2.1",
