--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "keep",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build": "gulp build",
+    "deploy": "gulp deploy"
+  },
   "private": true,
   "dependencies": {
     "@angular-devkit/build-angular": "^0.6.5",
@@ -20,11 +23,14 @@
     "angular5-social-login": "^1.0.9",
     "angularfire2": "^5.0.0-rc.10",
     "chalk": "^2.4.1",
+    "child_process": "^1.0.2",
     "core-js": "^2.4.1",
     "firebase": "^5.0.4",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.5.0",
     "gulp-jspm-build": "0.0.16",
+    "gulp-minify": "^3.0.2",
     "gulp-nodemon": "^2.2.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-tslint": "^8.1.3",
