--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular2-virtual-scroll": "0.4.9",
     "angular5-social-login": "^1.0.9",
     "angularfire2": "^5.0.0-rc.10",
     "chalk": "^2.4.1",
@@ -37,6 +38,7 @@
     "gulp-typescript": "^4.0.2",
     "lite-server": "^2.3.0",
     "ng2-ion-range-slider": "^2.0.0",
+    "ngx-bootstrap": "3.0.1",
     "ngx-onsenui": "^4.2.0",
     "onsenui": "^2.10.1",
     "run-sequence": "^2.2.1",
