--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "keep",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "build": "gulp build",
-    "deploy": "gulp deploy"
+    "deploy": "gulp deploy",
+    "release": "standard-version"
   },
   "private": true,
   "dependencies": {
@@ -43,6 +44,7 @@
     "onsenui": "^2.10.1",
     "run-sequence": "^2.2.1",
     "rxjs": "^5.5.6",
+    "standard-version": "4.4.0",
     "url-crypt": "^1.2.1",
     "zone.js": "^0.8.19"
   },
