--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keep",
-  "version": "0.0.6-0",
+  "version": "1.1.0",
   "license": "MIT",
   "scripts": {
     "build": "gulp build",
