--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@angular-devkit/build-angular": "^0.6.5",
     "@angular/animations": "^5.2.6",
     "@angular/cdk": "^5.2.2",
+    "@angular/cdk-experimental": "6.4.6",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
@@ -40,6 +41,7 @@
     "ng2-ion-range-slider": "^2.0.0",
     "ngx-bootstrap": "3.0.1",
     "ngx-onsenui": "^4.2.0",
+    "ngx-virtual-scroll-plus": "0.4.2",
     "onsenui": "^2.10.1",
     "run-sequence": "^2.2.1",
     "rxjs": "^5.5.6",
