--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "license": "MIT",
   "scripts": {
     "build": "gulp build",
-    "deploy": "gulp deploy"
+    "deploy": "gulp deploy",
+    "lint": "eslint .",
+    "fix": "eslint --fix ."
   },
   "private": true,
   "dependencies": {
@@ -21,16 +23,24 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ljharb/eslint-config": "13.0.0",
     "angular2-virtual-scroll": "0.4.9",
     "angular5-social-login": "^1.0.9",
     "angularfire2": "^5.0.0-rc.10",
     "chalk": "^2.4.1",
     "child_process": "^1.0.2",
     "core-js": "^2.4.1",
+    "eslint": "5.4.0",
+    "eslint-config-semistandard": "12.0.1",
+    "eslint-config-standard": "12.0.0",
+    "eslint-config-strongloop": "2.1.0",
+    "eslint-plugin-angular": "3.3.0",
     "firebase": "^5.0.4",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.5.0",
+    "gulp-connect-pm2": "0.0.2",
+    "gulp-eslint": "5.0.0",
     "gulp-jspm-build": "0.0.16",
     "gulp-minify": "^3.0.2",
     "gulp-nodemon": "^2.2.1",
@@ -43,6 +53,7 @@
     "ngx-onsenui": "^4.2.0",
     "ngx-virtual-scroll-plus": "0.4.2",
     "onsenui": "^2.10.1",
+    "pm2": "3.0.4",
     "run-sequence": "^2.2.1",
     "rxjs": "^5.5.6",
     "standard-version": "4.4.0",
@@ -57,6 +68,10 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-node": "7.0.1",
+    "eslint-plugin-promise": "4.0.0",
+    "eslint-plugin-standard": "4.0.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
