--- a/HotCake/package.json
+++ b/HotCake/package.json
@@ -15,13 +15,15 @@
         "cordova-plugin-file": "^6.0.1",
         "cordova-plugin-http": "^1.2.0",
         "cordova-plugin-inappbrowser": "^3.0.0",
+        "cordova-plugin-network-information": "2.0.1",
         "cordova-plugin-whitelist": "git+https://github.com/apache/cordova-plugin-whitelist.git"
     },
     "cordova": {
         "plugins": {
             "cordova-plugin-whitelist": {},
             "cordova-plugin-http": {},
-            "cordova-plugin-inappbrowser": {}
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-network-information": {}
         },
         "platforms": [
             "browser",
