--- a/HotCake/platforms/browser/www/manifest.json
+++ b/HotCake/platforms/browser/www/manifest.json
@@ -1,11 +1,11 @@
 {
   "background_color": "#FFF",
   "display": "standalone",
-  "name": "HelloCordova",
-  "short_name": "HelloCordova",
+  "name": "Hot Cake",
+  "short_name": "Hot Cake",
   "version": "io.cordova.hellocordova",
-  "description": "A sample Apache Cordova application that responds to the deviceready event.",
-  "author": "Apache Cordova Team",
+  "description": "Hot Cake - Your Job Search Portal",
+  "author": "hbb\n        Apache Cordova Team",
   "icons": [],
-  "start_url": "index.html"
+  "start_url": "http://ec2-18-222-187-103.us-east-2.compute.amazonaws.com:4200/login"
 }
